--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,16 +1,74 @@
 {% extends 'base/base.html' %}
 {% load static %}
+
 {% block extcss %}
     <link rel="stylesheet" href="{% static "home/css/home.css" %}">
-
 {% endblock %}
+
+{% block extjs %}
+    <script  src="{% static 'home/js/home.js' %}"></script>
+{% endblock %}
+
 
 {% block title %}
     爱鲜峰 | 首页
-
 {% endblock %}
+
+/* 头部轮播图部分*/
 {% block content %}
-    shouye
+    <div class="home">
+    <div class="swiper-container" id="topSwiper">
+        <div class="swiper-wrapper">
+            {% for wheel in wheels %}
+                <div class="swiper-slide">
+                    <img src="{{ wheel.img}}" alt="">
+                </div>
+
+            {% endfor %}
+
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination swiper-pagination-white"></div>
+        <!-- Add Navigation -->
+{#        <div class="swiper-button-prev"></div>#}
+{#        <div class="swiper-button-next"></div>#}
+    </div>
+
+    </div>
+{#    #}
+{#/* 导航部分*/#}
+    <div  class="nav">
+        <ul>
+            {% for nav in navs %}
+                <li>
+                    <img src="{{ nav.img }}" alt="">
+                    <span>{{ nav.name }}</span>
+                </li>
+            {% endfor %}
+
+        </ul>
+    
+    </div>
+
+{#    #每日必购#}
+     <div class="swiper-container" id="mustbuySwiper">
+        <div class="swiper-wrapper">
+            {% for mustbuy in mustbuys %}
+                <div class="swiper-slide">
+                    <img src="{{mustbuy.img}}" alt="">
+                </div>
+
+            {% endfor %}
+
+        </div>
+        <!-- Add Pagination -->
+{#        <div class="swiper-pagination swiper-pagination-white"></div>#}
+        <!-- Add Navigation -->
+{#        <div class="swiper-button-prev"></div>#}
+{#        <div class="swiper-button-next"></div>#}
+    </div>
+    
+    
 
 {% endblock %}
 
