--- a/static/market/css/market.css
+++ b/static/market/css/market.css
@@ -50,7 +50,7 @@ footer .market dd {
 
 
 /* 顶部通栏*/
-.market  nav{
+.market .nav{
     width: 100%;
     height: 2rem;
     padding-left: 4rem;
@@ -61,17 +61,17 @@ footer .market dd {
     position: relative;
     z-index: +1;
 }
-.market nav ul{
+.market .nav ul{
     display: flex;
     border-left: 1px solid #e0e0e0;
 }
-.market nav ul li{
+.market .nav ul li{
     width: 50%;
 }
-.market nav ul li span{
+.market .nav ul li span{
     font-size: 0.8rem;
 }
-.market nav ul li span i{
+.market .nav ul li span i{
     margin-left: 0.4rem;
 }
 
@@ -85,6 +85,7 @@ footer .market dd {
     position: absolute;
     left: 0;
     top: 0;
+
 }
 
 .market .main-content .content-wrapper{
@@ -101,6 +102,7 @@ footer .market dd {
     margin: 0.7rem;
     border-radius: 0.2rem;
     position: relative;
+    overflow: hidden;
 }
 .market .main-content .content-wrapper ul li a{
     display: block;
