--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -14,8 +14,9 @@
     爱鲜峰 | 首页
 {% endblock %}
 
-/* 头部轮播图部分*/
+
 {% block content %}
+{# /* 头部轮播图部分*/   #}
     <div class="home">
     <div class="swiper-container" id="topSwiper">
         <div class="swiper-wrapper">
@@ -68,7 +69,86 @@
 {#        <div class="swiper-button-next"></div>#}
     </div>
     
+{##商品    #}
+    <div class="shop">
+        <div class="shophead">
+            <a href="#"><img src="{{ shophead.img}}" alt=""></a>
+        </div>
+        <div class="shoptab">
+            {% for shoptab in shoptabs %}
+                <a href="#"><img src="{{ shoptab.img}}" alt=""></a>
+
+            {% endfor %}
+        </div>
+        <ul class="shopclass">
+            {% for shopclass in shopclasses %}
+                <li ><a href="#"><img src="{{ shopclass.img }}" alt=""></a></li>
+            
+            {% endfor %}
+        </ul>
+        <ul class="shopcommend">
+            {% for shopcommand in shopcommands %}
+
+                <li>
+                    <a href="#"><img src="{{ shopcommand.img }}" alt=""></a>
+                </li>
+
+            {% endfor %}
+        </ul>
     
+    </div>
+
+{#    主体：#}
+    <div class='main'>
+
+        {% for mianshow in mainshows %}
+            <div class='main-wrapper'>
+                <div class="title">
+                    {{ mianshow.name }}
+                    <a href="#">更多</a>
+                    <span></span>
+                </div>
+                <div class="headimg"><img src="{{ mianshow.img }}" alt=""></div>
+                <div class="shoplist">
+                    <div class="shopitem">
+                        <button><span>+</span></button>
+                        <a href="#">
+                            <img src="{{ mianshow.img1 }}" alt="" class="img">
+                            <span class="desc">{{ mianshow.longname1 }}</span>
+                            <span class="price">{{ mianshow.price1 }}</span>
+                            <span class="marketprice">{{ mianshow.marketprice1 }}</span>
+                        </a>
+
+                    </div>
+                    <div class="shopitem">
+                        <button><span>+</span></button>
+                        <a href="#">
+                            <img src="{{ mianshow.img2 }}" alt="" class="img">
+                            <span class="desc">{{ mianshow.longname2 }}</span>
+                            <span class="price">{{ mianshow.price2 }}</span>
+                            <span class="marketprice">{{ mianshow.marketprice2 }}</span>
+                        </a>
+                    </div>
+                   <div class="shopitem">
+                        <button><span>+</span></button>
+                        <a href="#">
+                            <img src="{{ mianshow.img3}}" alt="" class="img">
+                            <span class="desc">{{ mianshow.longname3 }}</span>
+                            <span class="price">{{ mianshow.price3 }}</span>
+                            <span class="marketprice">{{ mianshow.marketprice3 }}</span>
+                        </a>
+
+                    </div>
+
+
+                </div>
+            </div>
+        {% endfor %}
+
+
+        </div>
+
+    </div>
 
 {% endblock %}
 
