--- a/static/mine/css/mine.css
+++ b/static/mine/css/mine.css
@@ -84,6 +84,7 @@ footer .mine dd {
 }
 .mine .other section ul li dl{
     text-align: center;
+    margin: 0;
 }
 .mine .other section ul li dl dt{
     width:100%;
